card carousel imgs now covering parent element correctly on all devices

--- a/src/assets/scss/_CardCarousel.scss
+++ b/src/assets/scss/_CardCarousel.scss
@@ -13,5 +13,6 @@
 
 .carousel-img {
   object-fit: cover;
-  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
